# toolbox

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  main.py  pyproject.toml
.ddd_config/: README.md  paths.json
examples/: README.md  simple_page.py  simple_plugin.py
scripts/: COMPLETION_INSTALL.md  ddd_cd.sh  ddd_cd.zsh  ddd_completion.bash  ddd_completion.zsh
src/: main.py
src/ddd/: __init__.py  cli.py  plugin_base.py
src/ddd/config/: structure.yaml
src/ddd/config/plugins/menu/: config.yaml
src/ddd/core/: __init__.py  base.py  config.py  logger.py  renderer.py  structure.py  ui.py  utils.py
src/ddd/pages/: __init__.py  env_config.py  home.py
src/ddd/plugins/: __init__.py  cd.py  menu.py  path_plugin.py  set_plugin.py  setting.py
src/ddd/ui_handler/: flet_handler.py  handler_base.py  rich_handler.py  rich_handler_new.py  utils.py
src/ddd/utils/: __init__.py  config.py  input_utils.py
