[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddd"
version = "0.1.0"
authors = [
    { name = "Developer", email = "dev@example.com" },
]
description = "A beautiful plugin-based development toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "textual>=0.60.0",
    "click>=8.0.0",
    "prompt_toolkit>=3.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
ddd = "ddd.cli:app"
